<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FBBC00"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/cookLogo"
        android:layout_width="248dp"
        android:layout_height="69dp"
        android:fontFamily="@font/pacifico"
        android:text="Registro"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailBox"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:background="@drawable/et_style"
        android:backgroundTint="@color/white"
        android:hint="@string/emailHint"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cookLogo"
        app:layout_constraintVertical_bias="0.268" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="81dp"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/e_mailTextView"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/emailBox"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="@+id/imageView2" />

    <EditText
        android:id="@+id/passwordTextBox"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/et_style"
        android:backgroundTint="@color/white"
        android:hint="@string/type_password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailBox" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="112dp"
        android:layout_height="42dp"
        android:fontFamily="sans-serif"
        android:text="@string/passwordTextView"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailBox"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonRegisterView"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:backgroundTint="#001643"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextBox"
        app:layout_constraintVertical_bias="0.333" />

</androidx.constraintlayout.widget.ConstraintLayout>