<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FBBC00"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="52dp" />

    <ImageView
        android:id="@+id/cookPicture"
        android:layout_width="139dp"
        android:layout_height="293dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/emailTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/cookLogo"
        android:layout_width="260dp"
        android:layout_height="147dp"
        android:fontFamily="@font/pacifico"
        android:text="ProCook"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/emailTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/emailTextBox"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_marginTop="296dp"
        android:background="@drawable/et_style"
        android:backgroundTint="@color/white"
        android:hint="@string/type_email"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordTextBox"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_style"
        android:backgroundTint="@color/white"
        android:hint="@string/type_password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextBox" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:backgroundTint="#001643"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextBox"
        app:layout_constraintVertical_bias="0.287" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="153dp"
        android:layout_height="62dp"
        android:layout_marginEnd="40dp"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif"
        android:text="@string/underline_button"
        android:textAllCaps="false"
        android:textColor="@drawable/button_styles"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view"
        style="@style/Divider.Horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/no_tienes_una_cuenta"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/registerButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.512" />


</androidx.constraintlayout.widget.ConstraintLayout>