<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC529">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="43dp"
        android:fontFamily="@font/ultra"
        android:text="Allergens"
        android:textColor="#272d2f"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/etIngredientName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etIngredientName"
        android:layout_width="370dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="62dp"
        android:background="@drawable/et_style"
        android:backgroundTint="@color/white"
        android:hint="@string/type_allergen"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/listaIntolerancias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/insertIntolerance"
        android:layout_width="370dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/et_style"
        android:backgroundTint="#272d2F"
        android:text="@string/add_allergen"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/deleteIntolerance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaIntolerancias" />

    <Button
        android:id="@+id/deleteIntolerance"
        android:layout_width="370dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/et_style"
        android:backgroundTint="#fe724c"
        android:text="@string/delete_alergen"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insertIntolerance" />

    <ListView
        android:id="@+id/listaIntolerancias"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="77dp"
        app:layout_constraintBottom_toTopOf="@+id/insertIntolerance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIngredientName" />
</androidx.constraintlayout.widget.ConstraintLayout>